--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.16.0",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/react": "^18.2.14",
     "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "^18.2.6",
