--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.1.1",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
